<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:padding="@dimen/dp_15"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/back_iv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="@dimen/dp_22"
        android:background="@drawable/selector_back"
        android:layout_height="@dimen/dp_22"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:text="中国大陆"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/color_them"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"></TextView>


    <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_97"
        android:src="@mipmap/yike"
        android:layout_height="wrap_content"></ImageView>

    <TextView
        android:id="@+id/varify_tv"
        app:layout_constraintTop_toBottomOf="@+id/logo_iv"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:text="手机认证由当地运营商提供"
        android:layout_marginTop="@dimen/dp_45"
        android:textSize="@dimen/sp_11"
        android:drawableStart="@drawable/trusticon"
        android:textColor="@color/color666"
        android:visibility="gone"
        android:drawablePadding="@dimen/dp_3"
        android:layout_height="wrap_content"></TextView>
    <EditText
        android:id="@+id/userphone_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_60"
        android:layout_marginEnd="@dimen/dp_8"
        android:hint="@string/prompt_email"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:textSize="@dimen/sp_15"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@null"
        android:textColor="@color/color333"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        app:layout_constraintStart_toStartOf="parent"
        android:textColorHint="@color/color999"
        app:layout_constraintTop_toBottomOf="@+id/varify_tv" />

    <View
        android:id="@+id/line_phone"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/userphone_edt"
        android:background="@color/color_them"
        android:layout_height="0.5dp"></View>
    <EditText
        android:id="@+id/varify_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_marginEnd="@dimen/dp_8"
        android:hint="@string/prompt_code"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textSize="@dimen/sp_15"
        android:textColorHint="@color/color999"
        android:background="@null"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        android:textColor="@color/color333"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_phone" />
    <TextView
        android:id="@+id/onvarcode_tv"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/varify_edt"
        app:layout_constraintBottom_toBottomOf="@+id/varify_edt"
        android:text="获取验证码"
        android:textColor="@color/color_them"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content"></TextView>

    <View
        android:id="@+id/line_vary"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/varify_edt"
        android:background="@color/color666"
        android:layout_height="0.5dp"></View>


    <LinearLayout
        android:id="@+id/pwd_lay"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/line_vary"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginEnd="@dimen/dp_8"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/sp_15"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@null"
            android:textColor="@color/color333"
            app:layout_constraintStart_toStartOf="parent"
            android:textColorHint="@color/color999"
            app:layout_constraintTop_toBottomOf="@+id/varify_tv" />

        <View
            android:id="@+id/line_pwd"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/userphone_edt"
            android:background="@color/color666"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_height="0.5dp"></View>
    </LinearLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginBottom="@dimen/dp_21"
        android:text="注册"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dp_60"
        android:textSize="@dimen/sp_15"
        android:background="@drawable/shape_voice_unenable_btn"
        android:layout_marginEnd="@dimen/dp_60"
        android:textColor="@color/white"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/pwd_lay"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:layout_width="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/wechat_icon"
            android:layout_width="wrap_content"
            android:text="微信登录"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/color666"
            android:drawableTop="@drawable/lg_icon_wx"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:id="@+id/password_icon"
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="密码登录"
            android:layout_marginLeft="@dimen/dp_10"
            android:textSize="@dimen/sp_11"
            android:textColor="@color/color666"
            android:visibility="gone"
            android:drawableTop="@drawable/bbs_permission_disable"
            android:layout_height="wrap_content"></TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>